Factorizando codigo y areglando errores